chore: GitHub Actions 워크플로우 파일에 토큰 추가

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   update-readme:
     runs-on: ubuntu-latest
@@ -12,6 +15,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
 
       - name: Install tree
         run: sudo apt-get install -y tree
