chore: 워크플로우 파일 수정

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -25,7 +25,7 @@ jobs:
           echo "# sneaky study lab" > README.md
           echo "" >> README.md
           echo "\`\`\`" >> README.md
-          tree -L 1 -I '.git|.github|.idea|build|gradle|.gradle|build.gradle.kts|gradlew|gradlew.bat|settings.gradle.kts|README.md' >> README.md
+          tree -L 3 -I '.git|.github|.idea|build|gradle|.gradle|build.gradle.kts|gradlew|gradlew.bat|settings.gradle.kts|README.md' --noreport >> README.md
           echo "\`\`\`" >> README.md
 
       - name: Commit and push if changed
